commented out the archive option for stylesets and styles

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -68,7 +68,7 @@
 
 					<div class="styleset-options" data-ng-show="showStylesetOptions">
 						<div class="styleset-options-menupoint first" data-ng-click="editingStyleSetTitle = true; showStylesetOptions = false;">rename</div>
-						<div class="styleset-options-menupoint" data-ng-click="archiveStyleset(styleset); showStylesetOptions = false;">archive</div>
+						<!--<div class="styleset-options-menupoint" data-ng-click="archiveStyleset(styleset); showStylesetOptions = false;">archive</div>-->
 						<div class="styleset-options-menupoint" data-ng-click="applyStylesetToDocument(styleset,true); showStylesetOptions = false;">apply to document</div>
 						<div class="styleset-options-menupoint" data-ng-click="applyStylesetToProject(styleset); showStylesetOptions = false;">apply to ebook</div>
 					</div>
@@ -99,7 +99,7 @@
 
 							<div class="style-options" data-ng-show="showStyleOptions">
 								<div class="style-options-menupoint first" data-ng-click="editingStyleTitle = true; showStyleOptions = false;">rename</div>
-								<div class="style-options-menupoint" data-ng-click="archiveStyle(style); showStyleOptions = false;">archive</div>
+								<!--<div class="style-options-menupoint" data-ng-click="archiveStyle(style); showStyleOptions = false;">archive</div>-->
 							</div>
 						</li>
 						<li class="new style" data-ng-click="addNewStyle( styleset )"><p>+</p></li>
