--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 
-				<div class="feedback" data-ng-click="openFeedback()">
+				<div class="feedback feedback-fixed bottom-fixed" data-ng-click="openFeedback()">
 					<img src="pages/images/feedback.svg" width="20" />
 				</div>
 			</div>
