--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -27,20 +27,20 @@
 						<div class="arrow"></div>
 					</a>
 
-					<p data-ng-hide="editingProjectDocumentTitle">
+					<p data-ng-hide="projectDocument.editingProjectDocumentTitle">
 						<a class="projectDocument-link" data-ng-click="projectDocumentChosen(projectDocument)">
 							{{projectDocument.name}}
 						</a>
 					</p>
 
-					<form data-ng-show="editingProjectDocumentTitle">
+					<form data-ng-show="projectDocument.editingProjectDocumentTitle">
 						<p>
-							<textarea id="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!editingProjectDocumentTitle" on-enter="editingProjectDocumentTitle = false; renameProjectDocument(projectDocument);" data-ng-blur="editingProjectDocumentTitle = false; renameProjectDocument(projectDocument);"></textarea>
+							<textarea id="renameProjectDocument" rows="4" data-ng-model="projectDocument.name" focus-on="!!projectDocument.editingProjectDocumentTitle" on-enter="projectDocument.editingProjectDocumentTitle = false; renameProjectDocument(projectDocument);" data-ng-blur="projectDocument.editingProjectDocumentTitle = false; renameProjectDocument(projectDocument);"></textarea>
 						</p>
 					</form>
 
 					<div class="projectDocument-options" data-ng-show="showProjectDocumentOptions">
-						<div class="projectDocument-options-menupoint first" data-ng-click="editingProjectDocumentTitle = true; showProjectDocumentOptions = false;">rename</div>
+						<div class="projectDocument-options-menupoint first" data-ng-click="projectDocument.editingProjectDocumentTitle = true; showProjectDocumentOptions = false;">rename</div>
 						<div class="projectDocument-options-menupoint" data-ng-hide="projectDocument.archived" data-ng-click="archiveProjectDocument(projectDocument); showProjectDocumentOptions = false;">archive</div>
 						<div class="projectDocument-options-menupoint" data-ng-show="projectDocument.archived" data-ng-click="unarchiveProjectDocument(projectDocument); showProjectDocumentOptions = false;">unarchive</div>
 						<div class="projectDocument-options-hide" data-ng-click="showProjectDocumentOptions = false;" title="Close Options"></div>
@@ -58,16 +58,16 @@
 						<div class="arrow"></div>
 					</a>
 
-					<p class="not-selectable" data-ng-style="styleset.css" data-ng-click="typoChildrenVisible =! typoChildrenVisible; showStylesetOptions = false; focusEditor();" data-ng-hide="editingStyleSetTitle">{{styleset.name}}</p>
+					<p class="not-selectable" data-ng-style="styleset.css" data-ng-click="typoChildrenVisible =! typoChildrenVisible; showStylesetOptions = false; focusEditor();" data-ng-hide="styleset.editingStyleSetTitle">{{styleset.name}}</p>
 
-					<form data-ng-show="editingStyleSetTitle">
+					<form data-ng-show="styleset.editingStyleSetTitle">
 						<p>
-							<textarea id="renameStyleset" rows="1" data-ng-model="styleset.name" focus-on="!!editingStyleSetTitle" on-enter="editingStyleSetTitle = false; renameStyleset(styleset);" data-ng-blur="editingStyleSetTitle = false; renameStyleset(styleset);"></textarea>
+							<textarea id="renameStyleset" rows="1" data-ng-model="styleset.name" focus-on="!!styleset.editingStyleSetTitle" on-enter="styleset.editingStyleSetTitle = false; renameStyleset(styleset);" data-ng-blur="styleset.editingStyleSetTitle = false; renameStyleset(styleset);"></textarea>
 						</p>
 					</form>
 
 					<div class="styleset-options" data-ng-show="showStylesetOptions">
-						<div class="styleset-options-menupoint first" data-ng-click="editingStyleSetTitle = true; showStylesetOptions = false;">rename</div>
+						<div class="styleset-options-menupoint first" data-ng-click="styleset.editingStyleSetTitle = true; showStylesetOptions = false;">rename</div>
 						<!--<div class="styleset-options-menupoint" data-ng-click="archiveStyleset(styleset); showStylesetOptions = false;">archive</div>-->
 						<div class="styleset-options-menupoint" data-ng-click="applyStylesetToDocument(styleset,true); showStylesetOptions = false;">apply to document</div>
 						<div class="styleset-options-menupoint" data-ng-click="applyStylesetToProject(styleset); showStylesetOptions = false;">apply to ebook</div>
@@ -81,7 +81,7 @@
 
 							{{style.tag === 'h1' && setStylesetStyling(styleset, style) || ''}}
 
-							<div class="style-height" data-ng-hide="editingStyleTitle">
+							<div class="style-height" data-ng-hide="style.editingStyleTitle">
 								<span class="not-selectable" data-ng-style="getStyleStyling(style)" data-ng-click="applyStyle(styleset, style)">{{style.name}}</span>
 							</div>
 
@@ -93,12 +93,12 @@
 								</ul>
 							</div>
 
-							<form data-ng-show="editingStyleTitle">
-								<textarea id="renameStyle" rows="1" data-ng-model="style.name" focus-on="!!editingStyleTitle" on-enter="editingStyleTitle = false; updateStyle(style);" data-ng-blur="editingStyleTitle = false; updateStyle(style);"></textarea>
+							<form data-ng-show="style.editingStyleTitle">
+								<textarea id="renameStyle" rows="1" data-ng-model="style.name" focus-on="!!style.editingStyleTitle" on-enter="style.editingStyleTitle = false; updateStyle(style);" data-ng-blur="style.editingStyleTitle = false; updateStyle(style);"></textarea>
 							</form>
 
 							<div class="style-options" data-ng-show="showStyleOptions">
-								<div class="style-options-menupoint first" data-ng-click="editingStyleTitle = true; showStyleOptions = false;">rename</div>
+								<div class="style-options-menupoint first" data-ng-click="style.editingStyleTitle = true; showStyleOptions = false;">rename</div>
 								<!--<div class="style-options-menupoint" data-ng-click="archiveStyle(style); showStyleOptions = false;">archive</div>-->
 							</div>
 						</li>
