Fixed auth links.

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -26,9 +26,9 @@
 		</form>
 		<div class="socialicons clearfix" data-ng-hide="user._id && !user.isDemo">
 			<div class="social-registration-text" data-ng-bind="socialRegistrationText" data-ng-class="{ 'validate' : user._id }" data-ng-hide="user.isDemo"></div>
-			<div class="socialicon"><a href="auth/facebook"><span class="icon-facebook"></span></a></div>
-			<div class="socialicon"><a href="auth/linkedin"><span class="icon-linkedin"></span></a></div>
-			<div class="socialicon"><a href="auth/google"><span class="icon-google-plus"></span></a></div>
+			<div class="socialicon"><a href="../auth/facebook"><span class="icon-facebook"></span></a></div>
+			<div class="socialicon"><a href="../auth/linkedin"><span class="icon-linkedin"></span></a></div>
+			<div class="socialicon"><a href="../auth/google"><span class="icon-google-plus"></span></a></div>
 		</div>
 	</div>
 	<script type="text/javascript" src="scripts/angular-file-upload-html5-shim.min.js"></script>
