fixes #682 - social icons and position of registration text

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -28,9 +28,9 @@
 
 		<div class="socialicons clearfix" data-ng-hide="user._id && !user.isDemo">
 			<div class="social-registration-text" data-ng-bind="socialRegistrationText" data-ng-class="{ 'validate' : user._id }" data-ng-hide="user.isDemo"></div>
-			<div class="socialicon"><a href="../auth/facebook"><span class="icon-facebook"></span></a></div>
-			<div class="socialicon"><a href="../auth/linkedin"><span class="icon-linkedin"></span></a></div>
-			<div class="socialicon"><a href="../auth/google"><span class="icon-google-plus"></span></a></div>
+				<a class="socialicon" href="../auth/facebook"><span class="icon-facebook"></span></a>
+				<a class="socialicon" href="../auth/linkedin"><span class="icon-linkedin"></span></a>
+				<a class="socialicon" href="../auth/google"><span class="icon-google-plus"></span></a>
 		</div>
 		</div>
 	</div>
