loading the font differently

--- a/public/create/index.html
+++ b/public/create/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Scripler</title>
 
+	<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Roboto:400,700italic,700,500italic,400italic,500'>
 	<link rel="stylesheet" type="text/css" href="pages/css/shared/default.css" />
 	<link rel="stylesheet" type="text/css" href="../css/shared/fonts.css" />
 </head>
