--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -53,7 +53,7 @@
 				<p>+</p>
 			</div>
 			<ul>
-				<li data-ng-repeat="styleset in stylesets track by $index" class="typo" data-ng-class="{ 'open' : typoChildrenVisible }" data-ng-hide="styleset.archived || styleset.hidden">
+				<li data-ng-repeat="styleset in stylesets track by $index" id="{{styleset._id}}" class="typo" data-ng-class="{ 'open' : typoChildrenVisible }" data-ng-hide="styleset.archived || styleset.hidden">
 					<a class="styleset-options-show" data-ng-click="typoChildrenVisible = true; showStylesetOptions = !showStylesetOptions" data-ng-class="{ 'open' : showStylesetOptions }">
 						<div class="arrow"></div>
 					</a>
