--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -86,6 +86,7 @@
 							</div>
 
 							<div class="style-copy-options" data-ng-show="copyCSS && selectedStyle._id === style._id">
+								<p>The style has been changed, do you want to save these changes to the style?</p>
 								<ul>
 									<!--<li><a data-ng-click="saveAsCharStyle(styleset, style)">save as character style</a></li>-->
 									<li><a data-ng-click="saveAsBlockStyle(styleset, style)">save as new</a></li>
