inserting break in text

--- a/public/create/pages/project.html
+++ b/public/create/pages/project.html
@@ -86,7 +86,7 @@
 							</div>
 
 							<div class="style-copy-options" data-ng-show="copyCSS && selectedStyle._id === style._id">
-								<p>This style has been changed. Do you want to <br />
+								<p>This style has been changed.<br />Do you want to <br />
 									<a data-ng-click="saveAsBlockStyle(styleset, style)">save as new</a> or <br />
 									<a data-ng-click="overwriteStyle(style)">overwrite</a>
 								</p>
