new alpha onboard changes: new Test the alpha button, new signup link and form added at the bottom

--- a/public/create/pages/project-space.html
+++ b/public/create/pages/project-space.html
@@ -11,6 +11,12 @@
 				</div>
 				<div class="logo-box">
 					<img class="logo" src="/images/logo.png">
+
+					<div class="try-wrapper">
+						<button type="button" class="button banner-button">
+							We're in ALPHA. <a class="readmore" href="http://blog.scripler.com/test-scripler-now.html">Read more</a>
+						</button>
+					</div>
 				</div>
 				<div class="uni-bottom-box" data-ng-show="user._id && !user.isDemo">
 					<div class="user-box">
