--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,10 @@
 					Oh, and it’s free.
 				</div>
 				<div class="try-wrapper">
-					<a href="create/"><button type="button" class="button try-button">Go!</button></a>
+					<a href="create/"><button type="button" class="button try-button">Test the ALPHA!</button></a>
+				</div>
+				<div class="newsletter-signup-text create_subtext">
+					<p>I just want to <a href="#contact">sign up</a> for the newsletter.</p>
 				</div>
 		</article>
 	</section>
@@ -226,8 +229,218 @@
 				</div>
 
 				<h2>Stay informed</h2>
-				<div>Sign up for the newsletter and be the first to know when Scripler is launched. The newsletter will give you a gourmet selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.<br /><br />
-				<a href="#" class="to-top">Go to Signup</a>
+				<div>
+					Sign up for our newsletter and you'll get a selection of interesting news from the frontiers of digital publishing and updates on what we’re currently working on at Scripler.
+				</div>
+
+				<!-- MailChimp -->
+				<div class="create_form" id="mc_embed_signup">
+					<form action="http://scripler.us6.list-manage.com/subscribe/post?u=1b5826d9bbcb3775e3f837180&amp;id=74f540769b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div class="mc-field-group">
+							<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Email Address">
+							<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+						</div>
+						<div id="mce-responses" class="clear">
+							<div class="response error" id="mce-error-response" style="display:none;"></div>
+							<div class="response success" id="mce-success-response" style="display:none;"></div>
+						</div>
+					</form>
+				</div>
+
+				<script type="text/javascript">
+					var fnames = new Array();var ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';
+					try {
+						var jqueryLoaded=jQuery;
+						jqueryLoaded=true;
+					} catch(err) {
+						var jqueryLoaded=false;
+					}
+					var head= document.getElementsByTagName('head')[0];
+					if (!jqueryLoaded) {
+						var script = document.createElement('script');
+						script.type = 'text/javascript';
+						script.src = '//ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
+						head.appendChild(script);
+						if (script.readyState && script.onload!==null){
+							script.onreadystatechange= function () {
+								if (this.readyState == 'complete') mce_preload_check();
+							}
+						}
+					}
+
+					var err_style = '';
+					try{
+						err_style = mc_custom_error_style;
+					} catch(e){
+						err_style = '#mc_embed_signup input.mce_inline_error{border-color:#6B0505;} #mc_embed_signup div.mce_inline_error{margin: 0 0 1em 0; padding: 5px 10px; background-color:#6B0505; font-weight: bold; z-index: 1; color:#fff;}';
+					}
+					var head= document.getElementsByTagName('head')[0];
+					var style= document.createElement('style');
+					style.type= 'text/css';
+					if (style.styleSheet) {
+						style.styleSheet.cssText = err_style;
+					} else {
+						style.appendChild(document.createTextNode(err_style));
+					}
+					head.appendChild(style);
+					setTimeout('mce_preload_check();', 250);
+
+					var mce_preload_checks = 0;
+					function mce_preload_check(){
+						if (mce_preload_checks>40) return;
+						mce_preload_checks++;
+						try {
+							var jqueryLoaded=jQuery;
+						} catch(err) {
+							setTimeout('mce_preload_check();', 250);
+							return;
+						}
+						var script = document.createElement('script');
+						script.type = 'text/javascript';
+						script.src = 'http://downloads.mailchimp.com/js/jquery.form-n-validate.js';
+						head.appendChild(script);
+						try {
+							var validatorLoaded=jQuery("#fake-form").validate({});
+						} catch(err) {
+							setTimeout('mce_preload_check();', 250);
+							return;
+						}
+						mce_init_form();
+					}
+					function mce_init_form(){
+						jQuery(document).ready( function($) {
+							var options = { errorClass: 'mce_inline_error', errorElement: 'div', onkeyup: function(){}, onfocusout:function(){}, onblur:function(){}  };
+							var mce_validator = $("#mc-embedded-subscribe-form").validate(options);
+							$("#mc-embedded-subscribe-form").unbind('submit');//remove the validator so we can get into beforeSubmit on the ajaxform, which then calls the validator
+							options = { url: 'http://scripler.us6.list-manage.com/subscribe/post-json?u=1b5826d9bbcb3775e3f837180&id=74f540769b&c=?', type: 'GET', dataType: 'json', contentType: "application/json; charset=utf-8",
+										beforeSubmit: function(){
+											$('#mce_tmp_error_msg').remove();
+											$('.datefield','#mc_embed_signup').each(
+												function(){
+													var txt = 'filled';
+													var fields = new Array();
+													var i = 0;
+													$(':text', this).each(
+														function(){
+															fields[i] = this;
+															i++;
+														});
+													$(':hidden', this).each(
+														function(){
+															var bday = false;
+															if (fields.length == 2){
+																bday = true;
+																fields[2] = {'value':1970};//trick birthdays into having years
+															}
+															if ( fields[0].value=='MM' && fields[1].value=='DD' && (fields[2].value=='YYYY' || (bday && fields[2].value==1970) ) ){
+																this.value = '';
+															} else if ( fields[0].value=='' && fields[1].value=='' && (fields[2].value=='' || (bday && fields[2].value==1970) ) ){
+																this.value = '';
+															} else {
+																if (/\[day\]/.test(fields[0].name)){
+																	this.value = fields[1].value+'/'+fields[0].value+'/'+fields[2].value;
+																} else {
+																	this.value = fields[0].value+'/'+fields[1].value+'/'+fields[2].value;
+																}
+															}
+														});
+												});
+											$('.phonefield-us','#mc_embed_signup').each(
+												function(){
+													var fields = new Array();
+													var i = 0;
+													$(':text', this).each(
+														function(){
+															fields[i] = this;
+															i++;
+														});
+													$(':hidden', this).each(
+														function(){
+															if ( fields[0].value.length != 3 || fields[1].value.length!=3 || fields[2].value.length!=4 ){
+																this.value = '';
+															} else {
+																this.value = 'filled';
+															}
+														});
+												});
+											return mce_validator.form();
+										},
+										success: mce_success_cb
+									};
+						  $('#mc-embedded-subscribe-form').ajaxForm(options);
+						});
+					}
+					function mce_success_cb(resp){
+						$('#mce-success-response').hide();
+						$('#mce-error-response').hide();
+						if (resp.result=="success"){
+							//$('#mce-'+resp.result+'-response').show();
+							$('#mce-'+resp.result+'-response').html(resp.msg).show();
+							$('#mc-embedded-subscribe-form').each(function(){
+								this.reset();
+							});
+						} else {
+							var index = -1;
+							var msg;
+							try {
+								var parts = resp.msg.split(' - ',2);
+								if (parts[1]==undefined){
+									msg = resp.msg;
+								} else {
+									i = parseInt(parts[0]);
+									if (i.toString() == parts[0]){
+										index = parts[0];
+										msg = parts[1];
+									} else {
+										index = -1;
+										msg = resp.msg;
+									}
+								}
+							} catch(e){
+								index = -1;
+								msg = resp.msg;
+							}
+							try{
+								if (index== -1){
+									//$('#mce-'+resp.result+'-response').show();
+									$('#mce-'+resp.result+'-response').html(msg).show();
+								} else {
+									err_id = 'mce_tmp_error_msg';
+									html = '<div id="'+err_id+'" style="'+err_style+'"> '+msg+'</div>';
+
+									var input_id = '#mc_embed_signup';
+									var f = $(input_id);
+									if (ftypes[index]=='address'){
+										input_id = '#mce-'+fnames[index]+'-addr1';
+										f = $(input_id).parent().parent().get(0);
+									} else if (ftypes[index]=='date'){
+										input_id = '#mce-'+fnames[index]+'-month';
+										f = $(input_id).parent().parent().get(0);
+									} else {
+										input_id = '#mce-'+fnames[index];
+										f = $().parent(input_id).get(0);
+									}
+									if (f){
+										$(f).append(html);
+										$(input_id).focus();
+									} else {
+										$('#mce-'+resp.result+'-response').show();
+										$('#mce-'+resp.result+'-response').html(msg);
+									}
+								}
+							} catch(e){
+								//$('#mce-'+resp.result+'-response').show();
+								$('#mce-'+resp.result+'-response').html(msg).show();
+							}
+						}
+					}
+				</script>
+				<!-- MailChimp -->
+
+				<div class="socialicons-bottom clearfix">
+					<div class="socialicon"><a href="https://www.facebook.com/Scripler" target="_blank"><span class="icon-facebook"></span></a></div>
+					<div class="socialicon"><a href="https://twitter.com/Scriplerdk" target="_blank"><span class="icon-twitter"></span></a></div>
+					<div class="socialicon"><a href="https://plus.google.com/110745200191180687790/" target="_blank"><span class="icon-google-plus"></span></a></div>
 				</div>
 			</article>
 	</section>
